# bonn-cc

./: .gitignore  README.md
homework_2/igg_image/: CMakeLists.txt  diff.txt
homework_2/igg_image/data/: lena.ascii-2.pgm  lena.ascii-3.pgm  lena.ascii-4.pgm
homework_2/igg_image/src/igg_image/: CMakeLists.txt  image.cc  image.h  main.cc
homework_2/igg_image/tests/: CMakeLists.txt  test_image.cc
homework_3/igg_image/: CMakeLists.txt
homework_3/igg_image/data/: pbmlib.ascii.red.ppm
homework_3/igg_image/src/: CMakeLists.txt  main.cpp
homework_3/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
homework_3/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.cpp
homework_3/igg_image/tests/: CMakeLists.txt  test_init.cpp
homework_4/homework_4/digit_counter/: CMakeLists.txt
homework_4/homework_4/digit_counter/src/: CMakeLists.txt
homework_4/homework_4/digit_counter/src/digit_counter/: CMakeLists.txt  digit_counter.cc  digit_counter.hh
homework_4/homework_4/digit_counter/tests/: CMakeLists.txt  test_digit.cc
homework_4/homework_4/igg_image/data/: pbmlib.ascii.red.ppm
homework_4/homework_4/igg_image/src/: main.cpp
homework_4/homework_4/igg_image/src/igg_image/: image.cpp  image.h
homework_4/homework_4/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  png_strategy.h  ppm_strategy.h
homework_4/homework_4/igg_image/tests/: test_from_png.cpp  test_from_ppm.cpp  test_init.cpp  test_resize.cpp
homework_4/homework_4/stack_limit/: stack_limit  stack_limit.cc
